repo: Generate api resources for Observation entity
