# prototype-api/src/observation/dto/observation-response.dto.ts
@@ -1,0 +1,62 @@
+import { ApiProperty, ApiPropertyOptional } from '@nestjs/swagger';
+import { MemberResponseDto } from '../../member/dto/member-response.dto.js';
+
+export class ObservationResponseDto {
+  @ApiProperty({
+    description: 'Globally unique identifier for this observation.',
+  })
+  id: string;
+
+  @ApiProperty({ description: 'IFS system identifier for this Observation.' })
+  ifsId: string;
+
+  @ApiProperty({
+    description: 'Entity category for this object, normally Observation.',
+  })
+  entityType: string;
+
+  @ApiPropertyOptional({
+    description: 'Id of the object this object is derived from.',
+  })
+  basedOn?: string;
+
+  @ApiProperty({
+    description: 'URL for documentation about this entity.',
+    format: 'uri',
+  })
+  entityDocumentationUrl: string;
+
+  @ApiProperty({
+    description: 'Timestamp when this observation record was created.',
+    format: 'date-time',
+  })
+  createdAt: string;
+
+  @ApiProperty({
+    description: 'Timestamp when this observation record was last updated.',
+    format: 'date-time',
+  })
+  updatedAt: string;
+
+  @ApiProperty({ description: 'Description of what was observed.' })
+  description: string;
+
+  @ApiProperty({
+    description:
+      'Location identifiers or names where the observation occurred.',
+    type: [String],
+  })
+  locations: Array<string>;
+
+  @ApiProperty({
+    description: 'Date and time when the observation occurred.',
+    format: 'date-time',
+  })
+  timeOfObservation: string;
+
+  @ApiProperty({
+    description: 'Member who made the report about what they observed.',
+    type: () => MemberResponseDto,
+  })
+  observer: MemberResponseDto;
+}
