# prototype-api/src/observation/dto/update-observation.dto.ts
@@ -1,0 +1,4 @@
+import { PartialType } from '@nestjs/swagger';
+import { CreateObservationDto } from './create-observation.dto.js';
+
+export class UpdateObservationDto extends PartialType(CreateObservationDto) {}
